--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # Please change this to the path where you want the uploaded files to be stored.
-file.upload-dir=D:/study/New folder
-file.download-dir=D:/study/java/output
-file.commands=cmd /c ping google.com
+file.upload-dir=/tmp
+file.download-dir=/tmp
+file.commands=/home/test/webservice/metadata_old.sh
 server.port=8899
