--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.servlet.multipart.max-request-size=215MB
 # Please change this to the path where you want the uploaded files to be stored.
 file.upload-dir=/tmp
 file.download-dir=/tmp
-file.commands=/home/test/webservice/metadata_old.sh
+file.commands=cmd /c sleep 5
+file.commands-in=cmd /c sleep 5
+file.commands-out=cmd /c sleep 5
 server.port=8899
